--- a/webapp/accounts/templates/base.html
+++ b/webapp/accounts/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>EHealth</title>
+  <title>DigitizedCheckupLog</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {% load static %}
